--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ kombu==4.2.1
 more-itertools==8.1.0
 mysqlclient==1.3.9
 Pillow==6.2.1
+python-decouple==3.3
 python-http-client==2.2.1
 pytz==2018.3
 requests==2.22.0
